next version with better design

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "Grußwort"
     url: /grusswort/
-  - title: "Redner"
-    url: /categories/
+  - title: "Referenten"
+    url: /referenten/
   - title: "Program"
     url: /tags/
   - title: "Veranstalter"
