--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
+#paginate: 5 # amount of posts to show
+#paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
@@ -50,10 +50,10 @@ include:
 
 # Plugins (previously gems:)
 plugins:
-  - jekyll-paginate
+#  - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-gist
-  - jemoji
+#  - jekyll-gist
+#  - jemoji
   - jekyll-include-cache
 
 #author:
