adding ga ad more content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Referenten"
     url: /referenten/
   - title: "Program"
-    url: /tags/
+    url: /program/
   - title: "Veranstalter"
     url: /about/
   - title: "Seminarort"
