--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ search: false
 
 # Build settings
 markdown: kramdown
-remote_theme: mmistakes/minimal-mistakes
+#remote_theme: mmistakes/minimal-mistakes
+theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
 #paginate: 5 # amount of posts to show
@@ -103,3 +104,12 @@ defaults:
     values:
       layout: single
       author_profile: false
+
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-167091919-1"
+    anonymize_ip: false # default
+
+compress_html:
+  clippings: all
