changes in config

--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ search: false
 
 # Build settings
 markdown: kramdown
-#remote_theme: mmistakes/minimal-mistakes
-theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes
+#theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
 #paginate: 5 # amount of posts to show
@@ -56,34 +56,6 @@ plugins:
 #  - jekyll-gist
 #  - jemoji
   - jekyll-include-cache
-
-#author:
-#  name   : "First Lastname"
-#  avatar : "/assets/images/bio-photo.jpg"
-#  bio    : "My awesome biography constrained to a sentence or two goes here."
-#  links:
-#    - label: "Website"
-#      icon: "fas fa-fw fa-link"
-#      url: "https://"
-#    - label: "Twitter"
-#      icon: "fab fa-fw fa-twitter-square"
-#      url: "https://twitter.com/"
-#    - label: "GitHub"
-#      icon: "fab fa-fw fa-github"
-#      url: "https://github.com/"
-#    - label: "Instagram"
-#      icon: "fab fa-fw fa-instagram"
-#      url: "https://instagram.com/"
-
-footer:
-  links:
-    - label: "Impressum"
-      icon: "fab fa-fw fa-imprint"
-      url: "/impressum/"
-    - label: "Shanti"
-      image: "/assets/logo_shanti.jpg"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
 
 defaults:
   # _posts
