--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,6 @@ main:
   - title: "Program"
     url: /program/
   - title: "Seminarort"
-    url: /Seminarort/
+    url: /seminarort/
   - title: "Preis & Anmeldung"
     url: /anmeldung/
