--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 1. Internationales Shanti-Forum 2020
 email: info@shanti-yoga.ch
+siteurl: https://schmidb.github.io/shanti-forum
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
