--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: 1. Internationales Shanti-Forum 2020
 email: info@shanti-yoga.ch
-#url: https://schmidb.github.io
+url: https://shanti-forum.eu
 #baseurl: /shanti-forum
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
