--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,7 @@ email: info@shanti-yoga.ch
 url: https://shanti-forum.eu
 #baseurl: /shanti-forum
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Weltweit ist ein nicht übersehbarer Wandel im Gange, sowohl im individuell menschlichen wie auch in vielen wirtschaftlichen Bereichen. Wachstum stößt an ihre Grenzen! Jedoch gibt es auch sehr viele Bemühungen von Menschen und Institutionen, die im aufbauenden und schützenden Tätig sind für die Erde, den Menschen- Tier- und Pflanzenwelt. <br>An diesem 1. Internationalen Shanti-Forum kommen Menschen zu Wort und stellen Ihre ganz persönliche Zukunftsvision vor - die sie bereits leben, oder am Aufbauen und Weiterentwickeln sind.
 locale: de-DE
 
 twitter_username:
